# Azurlane-helper-bot

./: .env.dev  .gitignore  LICENSE  README.md  RECRUIT.MD  config.yaml  cv.md  preinstall.sh  pyproject.toml  requirements.txt
.VSCodeCounter/2023-04-01_21-26-06/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
AZbot/: render.py
AZbot/md2img/: __init__.py  parse.py  render.py
AZbot/plugins/: _error.py  _help.py  config.py  event.py  utils.py
AZbot/plugins/base/: __init__.py  _check.py  admin_command.py  group_admin_command.py  invite.py  sync.py
AZbot/plugins/bili/: __init__.py  bili_article.py
AZbot/plugins/build_simulator/: __init__.py  simulator.py
AZbot/plugins/checker/: __init__.py  rule_check.py  start_checker.py
AZbot/plugins/equip/: __init__.py  render.py
AZbot/plugins/group/: __init__.py
AZbot/plugins/server_status/: if_on.py  uti.py  util.py
AZbot/plugins/sync/: __init__.py  operation.py
data/azurlane/: git.json
data/azurlane/data/: pool.json
src/: render.py
src/plugins/: _check.py  _error.py  admin_command.py  config.py  event.py  exception.py  func_helper.py  json_utils.py  sync.py  sync_list.py  utils.py
src/plugins/base/: __init__.py  admin_command.py  func_helper.py  invite.py  sync.py
src/plugins/bili/: __init__.py  bili_article.py
src/plugins/build_simulator/: __init__.py  render.py  simulator.py
src/plugins/checker/: __init__.py  rule_check.py  start_checker.py
src/plugins/equip/: __init__.py  render.py
src/plugins/group/: __init__.py
(+6 files in other folders)
