[project]
name = "New"
version = "0.1.0"
description = "New"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "GitHub", module_name = "nonebot.adapters.github" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = []
