[project]
name = ""
version = ""
description = ""
authors = [
    {name = "MRSlouzk", email = "MRSlouu@163.com"},
]
dependencies = [
    "nb-cli>=1.1.2",
    "nonebot2[fastapi]>=2.0.0rc4",
    "bilibili-api-python>=15.4.0",
    "nonebot-plugin-apscheduler>=0.2.0",
    "GitPython>=3.1.31",
    "nonebot-adapter-onebot>=2.2.3",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler"]
plugin_dirs = ["AZbot/plugins"]
builtin_plugins = []

